# pyooo3

./: README.rst  pyproject.toml  setup.py  tea.yaml
.github/workflows/: python-publish.yml
